
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int decoding ;



__attribute__((used)) static inline int
b64index(uint8_t c) {
 static const int decoding[] = {62,-1,-1,-1,63,52,53,54,55,56,57,58,59,60,61,-1,-1,-1,-2,-1,-1,-1,0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,-1,-1,-1,-1,-1,-1,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51};
 int decoding_size = sizeof(decoding)/sizeof(decoding[0]);
 if (c<43) {
  return -1;
 }
 c -= 43;
 if (c>=decoding_size)
  return -1;
 return decoding[c];
}
